# deeplearn

./: CMakeLists.txt  Makefile
docs/: source_analysis.md  tutorial.md
examples/: inference.c  train_gpt2.c
include/: dl_autograd.h  dl_common.h  dl_dataloader.h  dl_nn.h  dl_ops.h  dl_optimizer.h  dl_serialize.h  dl_tensor.h  dl_tokenizer.h  dl_transformer.h
src/: dl_autograd.c  dl_dataloader.c  dl_nn.c  dl_ops.c  dl_optimizer.c  dl_serialize.c  dl_tensor.c  dl_tokenizer.c  dl_transformer.c
tests/: test_tensor.c
